2004-05-12  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (path_conv::check): Don't bail out with error if path is "//".

2004-05-12  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.h (struct init_cygheap): Add mt_h member.
	* fhandler_tape.cc (mt_h): Drop in favor of cygheap based handle.
	(mtinfo_init): Use cygheap->mt_h handle.  Protect it.

2004-05-12  Pierre Humblet <pierre.humblet@ieee.org>

	* tty.h: Remove the %d or %x from all cygtty strings.
	(tty::open_output_mutex): Only declare.
	(tty::open_input_mutex): Ditto.
	(tty::open_mutex): New definition.
	* fhandler_tty.cc (fhandler_tty_slave::open): Declare buf with
	size CYG_MAX_PATH and replace __small_printf calls by shared_name.
	* tty.cc (tty::create_inuse): Ditto.
	(tty::get_event): Ditto.
	(tty::common_init): Ditto.
	(tty::open_output_mutex): New method definition.
	(tty::open_input_mutex): Ditto.
	(tty::open_mutex): New method.

2004-05-11  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Set file attributes to correct
	value when creating files.
	* path.h (class path_conv): Add write accessor for file_attributes.

2004-05-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (class fhandler_socket): Add "owner" status flag.
	* fhandler_socket.cc (wait): Take flag parameter to take FD_OOB into
	account.  Don't wait infinitely.
	(fhandler_socket::recvfrom): Also wait for FD_OOB if socket owner.
	(fhandler_socket::recvmsg): Ditto.
	(fhandler_socket::sendto): Ditto.
	(fhandler_socket::sendmsg): Ditto.
	(fhandler_socket::fcntl): Set owner status flag if F_SETOWN with own
	pid is called.

2004-05-09  Pierre Humblet <pierre.humblet@ieee.org>

	* environ.cc (build_env): Only try to construct required-but-missing
	variables while issetuid.

2004-05-08  Pierre Humblet <pierre.humblet@ieee.org>
            Christopher Faylor  <cgf@timesys.com>

	* syscalls.cc: Include environ.h.
	(chroot): Set errno in case of path error.  Call getwinenv.